[package]
name = "neuroforge"
version = "0.1.0"
edition = "2021"

[dependencies]
cudarc = { version = "0.10", features = ["cublas", "curand", "nccl", "f16"] }
candle-core = "0.4"
candle-nn = "0.4"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rayon = "1.8"
indicatif = "0.17"
clap = { version = "4.0", features = ["derive"] }
async-trait = "0.1"
rand = "0.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[features]
cuda = []
cpu = []
